Rename error link title

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -71,6 +71,7 @@
               <div class="nhsuk-details__text">
                 <p>The same checks are done to see if a user has changed state since the GP checks (journey 1), these screens are shown to the user.</p>
                 <ul>
+                  <li><a href="discovery-2023/error/already-pyi-in-progress">Already has submitted a PYI application</a></li>
                   <li><a href="discovery-2023/error/expired">Already uplifted (same as link expired)</a></li>
                   <li><a href="discovery-2023/error/account-disabled">Account disabled</a></li>
                   <li><a href="discovery-2023/error/account-disabled-dead-with-account">Account disabled - User dead with account</a></li>
@@ -89,7 +90,6 @@
                   <li><a href="discovery-2023/error/pds-mobile-change">PDS mobile no longer matches</a></li>
                   <li><a href="discovery-2023/error/already-account-p9">P9 account already exists</a></li>
                   <li><a href="discovery-2023/error/timeout">Timeout</a></li>
-                  <li><a href="discovery-2023/error/already-pyi-in-progress">User has submitted a PYI application</a></li>
                   <li><a href="discovery-2023/error/wrongotp">Wrong code entered</a></li>
                   <li><a href="discovery-2023/error/wrong-password">Wrong password</a></li>
                 </ul>
