Added in paragraph

--- a/app/views/discovery-2023/error/already-pyi-in-progress.html
+++ b/app/views/discovery-2023/error/already-pyi-in-progress.html
@@ -32,7 +32,10 @@ You have already sent us proof of who you are
       <h1>You have already sent us proof of who you are</h1>
 
         <p>
-          We are currently checking some details you have already sent us to verify your identity. We will email you to let you know if they pass our checks. It may take up to <strong>24 hours</strong> for us to email you.
+          We are currently checking some details you have already sent us to verify your identity. 
+        </p>
+        <p>
+          We will email you to let you know if they pass our checks. It may take up to <strong>24 hours</strong> for us to email you.
         </p>
 
         <p>Reference: <b>CID1100X</b></p>
