--- a/docs/views/templates/nhsuk-coronavirus-hub.html
+++ b/docs/views/templates/nhsuk-coronavirus-hub.html
@@ -233,7 +233,7 @@
         </li>
 
 
-        <!-- NHS COVID Pass card -->
+        <!-- Remove covid pass - NHS COVID Pass card
         <li class="beta-hub-main-topic nhsuk-grid-column-one-half nhsuk-card-group__item">
           <div class="nhsuk-card nhsuk-card--clickable ">
             <div class="nhsuk-card__content beta-card__content">
@@ -249,6 +249,7 @@
             </div>
           </div>
         </li>
+      -->
 
 
         <!-- Self-isolation and treating symptons card -->
