--- a/app/views/live.html
+++ b/app/views/live.html
@@ -71,7 +71,29 @@
           <li class="nhsuk-contents-list__item"><a href="https://nhsd-confluence.digital.nhs.uk/display/NL/Provisioning+Journey+1+-+Responses%2C+errors+and+emails" target="_blank">Error table on Confluence</a></li>
         </ol>
 
-        <div class="informative-palegrey">User journey</div><br>
+        <div class="informative-palegrey">User journey - NHS App Wales login uplift</div><br>
+            <p style="font-size:14px;">
+              Allowing users to claim an NHS login account provisioned or uplifted by a GP.
+            </p>
+            <ol class="nhsuk-contents-list__list" style="font-size:14px;">
+              <li class="nhsuk-contents-list__item">
+                <a class="nhsuk-contents-list__link" href="client-nhs-wales-app/email/invite-new-account">New account set up email</a>
+              </li>
+              <li class="nhsuk-contents-list__item">
+                <a class="nhsuk-contents-list__link" href="client-nhs-wales-app/email/existing-account-uplift">Existing account uplift email </a>
+              </li>
+              <li class="nhsuk-contents-list__item">
+                <a class="nhsuk-contents-list__link" href="client-nhs-wales-app/email/existing-account-recovery">Existing account recovery email</a>
+              </li>
+              <li class="nhsuk-contents-list__item">
+                <a class="nhsuk-contents-list__link" href="client-nhs-wales-app/email/success-new-account">Succes new account</a>
+              </li>
+              <li class="nhsuk-contents-list__item">
+                <a class="nhsuk-contents-list__link" href="client-nhs-wales-app/email/success-uplift">Succes uplift (same as new account)</a>
+              </li>
+            </ol>
+
+        <div class="informative-palegrey">User journey - GP prescribing NHS App</div><br>
             <p style="font-size:14px;">
               Allowing users to claim an NHS login account provisioned or uplifted by a GP.
             </p>
