Initial email content review

--- a/app/views/client-nhs-wales-app/email/success-uplift.html
+++ b/app/views/client-nhs-wales-app/email/success-uplift.html
@@ -19,7 +19,7 @@ Email: You now have an NHS login
       </h1>
                   
       <p>
-        You have passed our checks and can now use your NHS login to access the NHS App: <a href="https://www.nhsapp.service.nhs.uk/login">https://www.nhsapp.service.nhs.uk/login</a>
+        You have passed our checks and can now use your NHS login to access the NHS Wales App: <a href="#">NEW LINK HERE</a>
       </p>
 
       <p>
@@ -40,13 +40,7 @@ Email: You now have an NHS login
           </li>
           <li>
             online pharmacies
-          </li>
-          <li>
-            online and video consultation services
-          </li>  
-          <li>
-            patient access services
-          </li>          
+          </li>     
         </ul>
       </p>
       <p>
