--- a/app/views/live.html
+++ b/app/views/live.html
@@ -59,10 +59,6 @@
         
         <h3>Update 2024 / NHS Wales App service</h3>
 
-        <p>[Add new links with params]</p>
-        
-        <h3>Discovery 2023 / NHS App main service</h3>
-
         <div class="informative-palegrey">GP checks</div><br>
         <p style="font-size:14px;">
           Provisioning will get it's own error codes to send back or be shared with GP staff.
@@ -73,25 +69,23 @@
 
         <div class="informative-palegrey">User journey - NHS App Wales login uplift</div><br>
             <p style="font-size:14px;">
-              Allowing users to claim an NHS login account provisioned or uplifted by a GP.
+              NHS App after doing POL using provisioning to uplift their NHS login account to highest level.
             </p>
             <ol class="nhsuk-contents-list__list" style="font-size:14px;">
-              <li class="nhsuk-contents-list__item">
-                <a class="nhsuk-contents-list__link" href="client-nhs-wales-app/email/invite-new-account">New account set up email</a>
-              </li>
               <li class="nhsuk-contents-list__item">
                 <a class="nhsuk-contents-list__link" href="client-nhs-wales-app/email/existing-account-uplift">Existing account uplift email </a>
               </li>
               <li class="nhsuk-contents-list__item">
-                <a class="nhsuk-contents-list__link" href="client-nhs-wales-app/email/existing-account-recovery">Existing account recovery email</a>
+                <a class="nhsuk-contents-list__link" href="client-nhs-wales-app/email/existing-account-recovery">Existing account recovery email (edge case)</a>
               </li>
               <li class="nhsuk-contents-list__item">
-                <a class="nhsuk-contents-list__link" href="client-nhs-wales-app/email/success-new-account">Succes new account</a>
-              </li>
-              <li class="nhsuk-contents-list__item">
-                <a class="nhsuk-contents-list__link" href="client-nhs-wales-app/email/success-uplift">Succes uplift (same as new account)</a>
+                <a class="nhsuk-contents-list__link" href="client-nhs-wales-app/email/success-uplift">Succes uplift</a>
               </li>
             </ol>
+
+
+        
+        <h3>Discovery 2023 / NHS App main service</h3>
 
         <div class="informative-palegrey">User journey - GP prescribing NHS App</div><br>
             <p style="font-size:14px;">
