--- a/app/views/client-nhs-wales-app/email/existing-account-uplift.html
+++ b/app/views/client-nhs-wales-app/email/existing-account-uplift.html
@@ -19,7 +19,7 @@ Email: Finish setting up your NHS login
       </p>
       
       <p class="nhsuk-body">
-        Your GP surgery has recommended that you use the <strong>NHS App</strong>. To access it you will need an NHS login account.
+        Your GP surgery has recommended that you use the <strong>NHS Wales App</strong>. To access it you will need an NHS login account.
       </p>
 
       <p class="nhsuk-body">This means you can do things like: 
@@ -41,7 +41,7 @@ Email: Finish setting up your NHS login
       </h2>
 
       <p class="nhsuk-body">
-        We need to send a 6 digit security code to the mobile phone number you used to register with your GP.
+        We need to send a 6 digit security code to the mobile phone number.
       </p>
 
       <p class="nhsuk-body">
