Amend of error link content

--- a/app/views/live.html
+++ b/app/views/live.html
@@ -59,14 +59,6 @@
         
         <h3>Update 2024 / NHS Wales App service</h3>
 
-        <div class="informative-palegrey">GP checks</div><br>
-        <p style="font-size:14px;">
-          Provisioning will get it's own error codes to send back or be shared with GP staff.
-        </p>
-        <ol class="nhsuk-contents-list__list" style="font-size:14px;">
-          <li class="nhsuk-contents-list__item"><a href="https://nhsd-confluence.digital.nhs.uk/display/NL/Provisioning+Journey+1+-+Responses%2C+errors+and+emails" target="_blank">Error table on Confluence</a></li>
-        </ol>
-
         <div class="informative-palegrey">User journey - NHS App Wales login uplift</div><br>
             <p style="font-size:14px;">
               NHS App after doing POL using provisioning to uplift their NHS login account to highest level.
@@ -86,6 +78,14 @@
 
         
         <h3>Discovery 2023 / NHS App main service</h3>
+
+        <div class="informative-palegrey">GP checks</div><br>
+        <p style="font-size:14px;">
+          Provisioning will get it's own error codes to send back or be shared with GP staff.
+        </p>
+        <ol class="nhsuk-contents-list__list" style="font-size:14px;">
+          <li class="nhsuk-contents-list__item"><a href="https://nhsd-confluence.digital.nhs.uk/display/NL/Provisioning+Journey+1+-+Responses%2C+errors+and+emails" target="_blank">Error table on Confluence (LATEST LINK?)</a></li>
+        </ol>
 
         <div class="informative-palegrey">User journey - GP prescribing NHS App</div><br>
             <p style="font-size:14px;">
