Content updates inc POL interrupt screen

--- a/app/views/client-nhs-wales-app/email/success-uplift.html
+++ b/app/views/client-nhs-wales-app/email/success-uplift.html
@@ -19,12 +19,12 @@ Email: You now have an NHS login
       </h1>
                   
       <p>
-        You have passed our checks and can now use your NHS login to access the NHS Wales App: <a href="#">NEW LINK HERE</a>
+        You have passed our checks and can now use your NHS login to access the <strong>NHS Wales App</strong>: <a href="#">NEW LINK HERE</a>
       </p>
 
-      <p>
+      <!--<p>
         You can also use the service your GP has recommended and other digital health and care services.
-      </p>
+      </p>-->
 
       <p>
         This includes:
