--- a/app/views/client-nhs-wales-app/existing-uplift/steps-completed.html
+++ b/app/views/client-nhs-wales-app/existing-uplift/steps-completed.html
@@ -37,20 +37,17 @@ You have set up an NHS login
                 <li class="service-access__item active">
                     <h3 class="service-access__item__title">You have set up an NHS login</h3>
                     <div class="service-access__item__desc">
-                    
+
                     <p style="font-size:18px">
-                      You have passed our checks and can access the <strong>{{ data['clientName'] or 'NHS App' }}</strong>.
+                      You have passed our checks and can access the <strong>NHS Wales App</strong>.
                     </p>
                     <h2 class="nhsuk-heading-s">What happens next</h2>
                     <p style="font-size:18px">
                       We have sent you an email to confirm you have finished setting up your NHS login.
                     </p>
-                    <p style="font-size:18px">
-                      Make sure you download the NHS App if you haven't already.
-                    </p>
 
                       <a href="https://www.nhsapp.service.nhs.uk/login" target="_blank" role="button" draggable="false" class="nhsuk-button">
-                        Continue to NHS App
+                        Back to NHS Wales App
                       </a>
 
                     <h2 class="nhsuk-heading-s">Help with NHS login</h2>
