--- a/app/views/client-nhs-wales-app/check-user/steps-who.html
+++ b/app/views/client-nhs-wales-app/check-user/steps-who.html
@@ -29,7 +29,9 @@ Get a security code
                   <h3 class="service-access__item__title">Get a security code</h3>
                   <div class="service-access__item__desc">
                     <p>We need to confirm it's you.</p>
-                    <p>We will send a 6 digit security code to the mobile phone number you used to register with your GP.</p>
+
+                    <p>We will send a 6 digit security code to your mobile phone number.</p>
+
                   </div>
                   <form method="POST">
                     <button class="nhsuk-button full-width" style="display:block; margin-bottom:0;">Continue</button>
