--- a/app/views/client-nhs-wales-app/pol/pol-interrupt.html
+++ b/app/views/client-nhs-wales-app/pol/pol-interrupt.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block pageTitle %}
-Confirm your details
+Next steps
 {% endblock %}
 
 {% block content %}
@@ -18,19 +18,28 @@ Confirm your details
           <div class="service-access-wrapper">
             <ol class="service-access">
 
-                <li class="service-access__item completed"> 
-                  <h3 class="service-access__item__title ticked" style="font-size:18px">Your GP has confirmed your identity</h3>
-                  <div class="service-access__item__desc">	
-                  </div>	
-                </li> 
-
                 <li class="service-access__item active">
-                  <h3 class="service-access__item__title">Verify your account</h3>
+                  <h3 class="service-access__item__title">Prove who you are without sending a photo of your ID</h3>
                   <div class="service-access__item__desc">
-                    <p>Your GP has confirmed your identity, to add this to your account continue and enter your password.</p>
+
+                    {% if data.contentVersion === 'A' %} 
+
+                    <p>You will need to return to the NHS Wales app to arrange verification from your GP surgery.</p>
+
+                    {% elif data.contentVersion === 'B' %} 
+
+                    <p>You will need to return to the NHS Wales app for details on how your GP can verify you.</p>
+
+                    {% else %} 
+
+                    <p>You will need to return to the NHS Wales app for details on how your GP can verify you.</p>
+
+                    
+                    {% endif %} 
+
                   </div>
                   <form method="POST">
-                    <button class="nhsuk-button full-width" style="display:block; margin-bottom:0;">Continue</button>
+                    <button class="nhsuk-button full-width" style="display:block; margin-bottom:0;">Back to NHS Wales App</button>
                   </form>
               <!-- {% if data.p5active === 'off' %}
               <li class="service-access__item active">	
