Further Wales content updates

--- a/app/views/client-nhs-wales-app/check-user/otp.html
+++ b/app/views/client-nhs-wales-app/check-user/otp.html
@@ -49,7 +49,6 @@ Enter the 6 digit security code
         {% endif %}
 
         <p class="nhsuk-body">We have sent a text to <strong>•••••••8209</strong>.</p>
-        <p class="nhsuk-body">This is the phone number that is registered with your GP surgery.</p>
 
         <details class="nhsuk-details">
           <summary class="nhsuk-details__summary">
@@ -66,7 +65,7 @@ Enter the 6 digit security code
         </details>
 
 
-        <details class="nhsuk-details">
+        <!--<details class="nhsuk-details">
           <summary class="nhsuk-details__summary">
             <span class="nhsuk-details__summary-text">
               I do not recognise this number
@@ -75,7 +74,7 @@ Enter the 6 digit security code
           <div class="nhsuk-details__text">
             <p>If you do not recognise this phone number or do not have access to your phone, you will need to update your records with your GP.</p>
           </div>
-        </details>
+        </details>-->
 
 
         <div class="nhsuk-u-padding-bottom-4"></div>
