--- a/app/views/client-nhs-wales-app/email/existing-account-recovery.html
+++ b/app/views/client-nhs-wales-app/email/existing-account-recovery.html
@@ -19,7 +19,7 @@ Email: Account details reminder from NHS login
       </p>
 
       <p class="nhsuk-body">
-        Your GP asked us to remind you of the email address used to create your NHS login account. 
+        You requested a reminder for the email address used to create your NHS login account. 
       </p>
       <p>
         We have sent this email to the address you used to create your account. 
