--- a/app/views/client-nhs-wales-app/email/success-uplift.html
+++ b/app/views/client-nhs-wales-app/email/success-uplift.html
@@ -19,7 +19,7 @@ Email: You now have an NHS login
       </h1>
                   
       <p>
-        You have passed our checks and can now use your NHS login to access the <strong>NHS Wales App</strong>: <a href="#">NEW LINK HERE</a>
+        You have passed our checks and can now use your NHS login to access the NHS Wales App: <a href="https://app.nhs.wales/login">https://app.nhs.wales/login</a>
       </p>
 
       <!--<p>
