--- a/app/views/client-nhs-wales-app/error/expired.html
+++ b/app/views/client-nhs-wales-app/error/expired.html
@@ -44,7 +44,7 @@ Your invitation to set up an NHS login has expired
       </p>
 
       <p>
-        If you have already set up an NHS login, you can use it to access the <a href="https://www.nhsapp.service.nhs.uk/login">NHS App</a>.
+        If you have already set up an NHS login, you can use it to access the <a href="https://app.nhs.wales/login">NHS Wales App</a>.
       </p>
 
       <p>Reference: <b>CID11013</b></p>
