--- a/app/views/client-nhs-wales-app/error/already-account-p9.html
+++ b/app/views/client-nhs-wales-app/error/already-account-p9.html
@@ -32,7 +32,7 @@ You already have an NHS login account
       <h1>You already have an NHS login account</h1>
 
         <p>
-          You can use your NHS login to access the <a href="https://www.nhsapp.service.nhs.uk/login">NHS App</a>.
+          You can use your NHS login to access the <a href="https://app.nhs.wales/login">NHS Wales App</a>.
         </p>
 
         <div class="nhsuk-card">
