Success uplift bullet content and error update

--- a/app/views/client-nhs-wales-app/email/success-uplift.html
+++ b/app/views/client-nhs-wales-app/email/success-uplift.html
@@ -22,29 +22,49 @@ Email: You now have an NHS login
         You have passed our checks and can now use your NHS login to access the NHS Wales App: <a href="https://app.nhs.wales/login">https://app.nhs.wales/login</a>
       </p>
 
-      <!--<p>
-        You can also use the service your GP has recommended and other digital health and care services.
-      </p>-->
+      <p class="nhsuk-body">This means you can do things like: 
+
+        <ul class="nhsuk-list nhsuk-list--bullet">
+          <li>
+            view your GP health record 
+          </li>
+          <li>
+            manage appointments 
+          </li>
+          <li>
+            order repeat prescriptions 
+          </li>       
+        </ul>
+
+      </p>
+
 
       <p>
-        This includes:
+        With an NHS login, you can also use other digital and health care services for:
       </p>
 
       <p class="nhsuk-body">
         <ul class="nhsuk-list nhsuk-list--bullet">
           <li>
-            health and wellbeing services
+            health and wellbeing
           </li>
           <li>
-            maternity and child health services
+            maternity and child health
           </li>
           <li>
             online pharmacies
+          </li>  
+          <li>
+            online and video consultation
+          </li>  
+          <li>
+            patient access
           </li>     
         </ul>
       </p>
+
       <p>
-        To find out more about the where you can use your NHS login, visit: <a class="https://www.nhs.uk/nhs-services/online-services/nhs-login/websites-and-apps-you-can-access-with-nhs-login/">https://www.nhs.uk/nhs-services/online-services/nhs-login/websites-and-apps-you-can-access-with-nhs-login/</a>
+        To find out more about where you can use your NHS login, visit: <a class="https://www.nhs.uk/nhs-services/online-services/nhs-login/websites-and-apps-you-can-access-with-nhs-login/">https://www.nhs.uk/nhs-services/online-services/nhs-login/websites-and-apps-you-can-access-with-nhs-login/</a>
       </p>
 
       <h2 class="nhsuk-heading-m">Help with NHS login</h2>
