--- a/app/views/client-nhs-wales-app/error/already-account-p5.html
+++ b/app/views/client-nhs-wales-app/error/already-account-p5.html
@@ -36,7 +36,7 @@ There is already an NHS login account linked to this NHS number
             </p>
       
             <p>
-              You can use the email linked to this account to access the <a href="https://app.nhs.wales/login">NHS Wales App</a>.
+              Use this email address to access the <a href="https://app.nhs.wales/login">NHS Wales App</a>.
             </p>
 
             <div class="nhsuk-inset-text nhsuk-u-margin-top-0">
