--- a/app/views/discovery-2023/email/success-uplift.html
+++ b/app/views/discovery-2023/email/success-uplift.html
@@ -50,7 +50,7 @@ Email: You now have an NHS login
         </ul>
       </p>
       <p>
-        To find out more about the where you can use your NHS login, visit: <a class="https://www.nhs.uk/nhs-services/online-services/nhs-login/websites-and-apps-you-can-access-with-nhs-login/">https://www.nhs.uk/nhs-services/online-services/nhs-login/websites-and-apps-you-can-access-with-nhs-login/</a>
+        To find out more about where you can use your NHS login, visit: <a class="https://www.nhs.uk/nhs-services/online-services/nhs-login/websites-and-apps-you-can-access-with-nhs-login/">https://www.nhs.uk/nhs-services/online-services/nhs-login/websites-and-apps-you-can-access-with-nhs-login/</a>
       </p>
 
       <h2 class="nhsuk-heading-m">Help with NHS login</h2>
