--- a/app/views/client-nhs-wales-app/error/expired.html
+++ b/app/views/client-nhs-wales-app/error/expired.html
@@ -43,9 +43,21 @@ Your invitation to set up an NHS login has expired
         If you want to set up an NHS login, you will need to ask your GP to send a new invitation.
       </p>
 
+      <h2>If you have already set up an NHS login</h2>
+
+      {% if data.clientId === 'Wales' %}
+
       <p>
-        If you have already set up an NHS login, use the email address linked to this account to access the <a href="https://app.nhs.wales/login">NHS Wales App</a>.
+        Use the email address linked to this account to access the <a href="https://app.nhs.wales/login">NHS Wales App</a>.
       </p>
+
+      {% else %}
+
+      <p>
+        Go to the website or app you were trying to access and enter the email address you used to set up your NHS login.
+      </p>
+
+      {% endif %}
 
       <p>Reference: <b>CID11013</b></p>
 
