Client generic content for invite email

--- a/app/views/client-nhs-wales-app/email/existing-account-uplift.html
+++ b/app/views/client-nhs-wales-app/email/existing-account-uplift.html
@@ -19,7 +19,7 @@ Email: Finish setting up your NHS login
       </p>
       
       <p class="nhsuk-body">
-        You need to finish setting up your NHS login. This means you will be able use the <strong>NHS Wales App</strong>. 
+        You need to finish setting up your NHS login. This means you will be able use the NHS App (or NHS Wales App if you live in Wales). 
       </p>
 
       <p class="nhsuk-body">This means you can do things like: 
