--- a/app/views/client-nhs-wales-app/error/already-account-p9.html
+++ b/app/views/client-nhs-wales-app/error/already-account-p9.html
@@ -31,19 +31,9 @@ You already have an NHS login account
 
       <h1>You already have an NHS login account</h1>
 
-      {% if data.clientId === 'Wales' %}
-
       <p>
-        Use the email address linked to this account to access the <a href="https://app.nhs.wales/login">NHS Wales App</a>.
+        <a href="https://app.nhs.wales/login">Go back to the NHS Wales App</a> and use the email address you entered to set up your NHS login.
       </p>
-
-      {% else %}
-
-      <p>
-        To use the website or app you were trying to access, use the email address you entered to set up your NHS login.
-      </p>
-
-      {% endif %}
 
         <div class="nhsuk-card">
           <div class="nhsuk-card__content">
