Updated email content

--- a/app/views/client-nhs-wales-app/email/existing-account-uplift.html
+++ b/app/views/client-nhs-wales-app/email/existing-account-uplift.html
@@ -19,11 +19,10 @@ Email: Finish setting up your NHS login
       </p>
       
       <p class="nhsuk-body">
-        You need to finish setting up your NHS login. This means you will be able to use the NHS App (or NHS Wales App if you live in Wales). 
+        You need to finish setting up your NHS login. This means you will be able to use the NHS App (or NHS Wales App if you live in Wales) to do things like:
       </p>
 
-      <p class="nhsuk-body">This means you can do things like: 
-
+      <p class="nhsuk-body">
         <ul class="nhsuk-list nhsuk-list--bullet">
           <li>
             view your GP health record 
